# gauntlet-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  GAUNTLET_AI_PROJECT_DOCUMENTATION.md  PAPER_LOG.md  README.md  README_SLM.md  TODO_CLEANUP.md  demo.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.planning/: PROJECT.md
app/: __init__.py  main.py
docs/: api-reference.md  layer1-rules-detection.md  layer2-embeddings-detection.md  layer3-llm-judge.md
evaluation/: __init__.py  benchmark.py  cross_benchmark.py  cross_benchmark_results.json  generate_dataset.py  pint_false_negatives.jsonl  pint_test_results.json  results.json  run_pint_test_benchmark.py  threshold_sweep.json
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.js
gauntlet/: __init__.py  _logging.py  api.py  cache.py  cli.py  config.py  detector.py  exceptions.py  mcp_server.py  model_manager.py  models.py
gauntlet-web/: package-lock.json  package.json  tailwind.config.ts
paper/: Gauntlet_Paper_v2.docx  Gauntlet_Writeup_Ashwin.docx  PAPER_CHECKLIST.md  PAPER_LOG.md  WRITEUP.md  benchmark_all_results.json  gauntlet_paper.tex  model_improvement_plan.md  plan.md
scripts/: create_api_key.py  create_dashboard_user.py  evaluate_embeddings.py  export_embeddings.py  run_migration.py  seed_embeddings.py
tests/: __init__.py  conftest.py  test_auth.py  test_detect_endpoint.py  test_embeddings.py  test_gauntlet_api.py  test_gauntlet_cache.py  test_gauntlet_config.py  test_gauntlet_detector.py  test_gauntlet_embeddings.py  test_gauntlet_llm_judge.py  test_gauntlet_logging.py  test_gauntlet_models.py  test_gauntlet_rules.py  test_gauntlet_slm_judge.py  test_llm_judge.py  test_rate_limiter.py  (+1 more)
(+141 files in other folders)
