[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gauntlet-ai"
version = "0.1.0"
description = "Prompt injection detection for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Gauntlet Contributors" }]
keywords = ["prompt-injection", "llm", "security", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
embeddings = ["openai>=1.12.0", "numpy>=1.24.0"]
llm = ["anthropic>=0.18.0"]
cli = ["typer[all]>=0.9.0", "rich>=13.0.0"]
mcp = ["mcp>=0.9.0"]
all = [
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "anthropic>=0.18.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "mcp>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
]

[project.scripts]
gauntlet = "gauntlet.cli:main"

[project.urls]
Homepage = "https://github.com/Ashwinash27/gauntlet-ai"
Repository = "https://github.com/Ashwinash27/gauntlet-ai"
Documentation = "https://github.com/Ashwinash27/gauntlet-ai#readme"

[tool.hatch.build.targets.wheel]
packages = ["gauntlet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
